Update text on home button on index

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -26,7 +26,7 @@
            href="About.html" data-remove-file-extension="true">About Us</a>
         <a class="nav_bar header_locations" id="nav_contact"
            href="Contact.html" data-remove-file-extension="true">Contact</a>
-        <a class="nav_bar header_title" href="proj/..">Testing</a>
+        <a class="nav_bar header_title" href="proj/..">IEEE GUELPH</a>
       </nav>
 
       <main class="body_section">
