change the email

--- a/www/html/Contact.html
+++ b/www/html/Contact.html
@@ -40,7 +40,7 @@
           <div class="p2">
             <p>
 
-              contact@ieeeguelph.ca
+              webmaster@ieeeguelph.ca
             </p>
 
             <p>
@@ -65,7 +65,7 @@
               </svg>
             </a>
 
-            <a class="socials_anchor" href="mailto:contact@ieeeguelph.ca"
+            <a class="socials_anchor" href="mailto:webmaster@ieeeguelph.ca"
                target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"
                    width="32"
