--- a/www/html/index.html
+++ b/www/html/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="banner_image_holder">
             <img class="banner_image"
-                 src="images/originals/warMem.png"
+                 src="images/originals/banner.png"
 
                  alt="TEMP">
             <div class="banner_text">
