add org text to about

--- a/www/html/About.html
+++ b/www/html/About.html
@@ -40,24 +40,18 @@
             Who we are
           </div>
           <div class="p1">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id est fermentum, dapibus mi ac, semper magna. Praesent rhoncus, libero sit amet
-            iaculis scelerisque, tellus massa venenatis tortor, sit amet finibus risus urna quis libero. Nulla scelerisque justo a augue tempor aliquet. Nunc
-            rutrum velit ut metus consectetur, vitae gravida purus imperdiet.
+            The IEEE is the largest technical professional organization dedicated to technological advancement. The University of Guelph IEEE Student Branch
+            specifically is dedicated to helping engineering students advance their professional careers and achieve their personal goals.
           </div>
           <div class="p2">
             <p>
-              Quisque dignissim erat lacus, et molestie lorem ultrices ac. Suspendisse id accumsan massa, nec aliquam nisl. Etiam at iaculis ante, eget
-              condimentum ex. Sed interdum non dolor vel dictum. Donec finibus vitae sem eget venenatis. Morbi maximus pretium efficitur. Mauris lacus dolor,
-              gravida sed vulputate sit amet, blandit placerat eros. Aliquam mollis faucibus turpis, nec sollicitudin ipsum luctus a. Integer pretium, libero
-              sed rutrum pellentesque, elit arcu laoreet ante, sollicitudin maximus purus enim et lorem. Etiam quam augue, hendrerit sit amet metus quis,
-              commodo eleifend ipsum. In lacus nunc, mattis ac sem et, venenatis malesuada nibh.
-            </p>
+              We host a variety of events each year to help students achieve these goals, such as different workshops, guest speakers, job networking events,
+              hackathons, coding competitions, and more.
 
-            <p>
-              Vestibulum facilisis convallis lacus, vel molestie diam interdum ultrices. Morbi varius eget ipsum non lobortis. Morbi hendrerit ex velit. Nunc
-              suscipit et mi ut malesuada. Suspendisse potenti. Vivamus id lobortis dolor. Aliquam in metus id nisl lacinia condimentum. Pellentesque ut sodales
-              ipsum. Integer mattis turpis neque, vitae accumsan magna vestibulum in. Cras facilisis, erat vel pretium consequat, libero velit placerat mauris,
-              interdum congue diam est eget nunc. Ut nunc nulla, pharetra id viverra consectetur, hendrerit eget massa.
+              The Institute of Electrical and Electronics Engineers is an international organization that aims to standardize and advance research in various
+              electro-technologies such as quantity storage in computers, medical devices, and networking. Students who show interest and join the club will
+              have the opportunity to attend various networking events, seminars, and workshops, providing students the opportunity to interact with engineers
+              in various electricity related professions.
             </p>
           </div>
 
