add section for Officer profiles

--- a/www/html/About.html
+++ b/www/html/About.html
@@ -58,6 +58,68 @@
         </div>
 
       </main>
+      Le Team
+
+      <main class="main_content">
+
+        <div class="proj_box">
+          <div class="proj_box_content">
+
+            <div class="proj_unit">
+              <div class="proj_header">
+                President
+              </div>
+              <div class="proj_desc">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit felis, et maximus
+                  tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum finibus.
+                </p>
+              </div>
+
+            </div>
+
+            <div class="proj_unit">
+              <div class="proj_header">
+                Vice-President
+              </div>
+              <div class="proj_desc">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit felis, et maximus
+                  tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum finibus.
+                </p>
+              </div>
+
+            </div>
+
+            <div class="proj_unit">
+              <div class="proj_header">
+                Secretary
+              </div>
+              <div class="proj_desc">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit felis, et maximus
+                  tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum finibus.
+                </p>
+              </div>
+
+            </div>
+
+            <div class="proj_unit">
+              <div class="proj_header">
+                Treasurer
+              </div>
+              <div class="proj_desc">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit felis, et maximus
+                  tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum finibus.
+                </p>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </main>
 
     </div>
 
