rename a lot of CSS refs

--- a/www/html/About.html
+++ b/www/html/About.html
@@ -58,18 +58,21 @@
         </div>
 
       </main>
-      Le Team
 
-      <main class="main_content">
+      <main class="le_team_content">
 
-        <div class="proj_box">
-          <div class="proj_box_content">
+        <div class="header">
+          Le Team
+        </div>
 
-            <div class="proj_unit">
-              <div class="proj_header">
+        <div class="le_box">
+          <div class="le_box_content">
+
+            <div class="le_box_unit">
+              <div class="le_box_header">
                 President
               </div>
-              <div class="proj_desc">
+              <div class="le_box_desc">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit felis, et maximus
                   tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum finibus.
@@ -78,11 +81,11 @@
 
             </div>
 
-            <div class="proj_unit">
-              <div class="proj_header">
+            <div class="le_box_unit">
+              <div class="le_box_header">
                 Vice-President
               </div>
-              <div class="proj_desc">
+              <div class="le_box_desc">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit felis, et maximus
                   tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum finibus.
@@ -91,11 +94,11 @@
 
             </div>
 
-            <div class="proj_unit">
-              <div class="proj_header">
+            <div class="le_box_unit">
+              <div class="le_box_header">
                 Secretary
               </div>
-              <div class="proj_desc">
+              <div class="le_box_desc">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit felis, et maximus
                   tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum finibus.
@@ -104,11 +107,11 @@
 
             </div>
 
-            <div class="proj_unit">
-              <div class="proj_header">
+            <div class="le_box_unit">
+              <div class="le_box_header">
                 Treasurer
               </div>
-              <div class="proj_desc">
+              <div class="le_box_desc">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit felis, et maximus
                   tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum finibus.
