update contact pic

--- a/www/html/Contact.html
+++ b/www/html/Contact.html
@@ -82,7 +82,7 @@
 
         <div class="image_div">
           <img class="image"
-               src="images/originals/hutt.png"
+               src="images/originals/contact.png"
                alt="TEMP">
         </div>
 
