add the images to the site

--- a/www/html/About.html
+++ b/www/html/About.html
@@ -69,6 +69,11 @@
           <div class="le_box_content">
 
             <div class="le_box_unit">
+              <div class="image_div">
+                <img class="le_box_image"
+                     src="images/originals/Steven.png"
+                     alt="TEMP">
+              </div>
               <div class="le_box_name">
                 Steven Shelestowsky
               </div>
@@ -84,6 +89,11 @@
             </div>
 
             <div class="le_box_unit">
+              <div class="image_div">
+                <img class="le_box_image"
+                     src="images/originals/Brijesh.png"
+                     alt="TEMP">
+              </div>
               <div class="le_box_name">
                 Brijesh Amulkumar Thakrar
               </div>
@@ -99,6 +109,11 @@
             </div>
 
             <div class="le_box_unit">
+              <div class="image_div">
+                <img class="le_box_image"
+                     src="images/originals/Moe.png"
+                     alt="TEMP">
+              </div>
               <div class="le_box_name">
                 Moe Jaber
               </div>
@@ -115,6 +130,11 @@
             </div>
 
             <div class="le_box_unit">
+              <div class="image_div">
+                <img class="le_box_image"
+                     src="images/originals/Maximilian.png"
+                     alt="TEMP">
+              </div>
               <div class="le_box_name">
                 Max Gerbec
               </div>
@@ -130,6 +150,11 @@
             </div>
 
             <div class="le_box_unit">
+              <div class="image_div">
+                <img class="le_box_image"
+                     src="images/originals/Lukas.png"
+                     alt="TEMP">
+              </div>
               <div class="le_box_name">
                 Lukas Krampitz
               </div>
