Update Spingle date. Remove lorem ipsum. remove unsuded buttons

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -70,7 +70,7 @@
                 IEEE Engineering Speed Mingle
               </div>
               <div class="feature_date_text">
-                DD.MMM.YYYY
+                04.Sep.2024
               </div>
               <div class="feature_blurb_text">
                 <p>
@@ -80,6 +80,7 @@
                 </p>
               </div>
 
+              <!--
               <div class="nav_button_div">
                 <a class="nav_button_anchor"
                    href="proj/Catan.html" data-remove-file-extension="true">
@@ -104,6 +105,8 @@
                   </div>
                 </a>
               </div>
+              -->
+
             </div>
 
             <div class="feature2">
@@ -118,13 +121,11 @@
               </div>
               <div class="feature_blurb_text">
                 <p>
-                  Some info on the event. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt, tellus eu mattis sodales, justo sapien suscipit
-                  felis, et maximus tortor ligula et elit. Nullam nec pretium mi. In eu iaculis odio, eu malesuada tellus. Cras quis eros ac lectus fermentum
-                  finibus. Curabitur dictum, quam in venenatis consequat, elit est aliquam magna, id mattis neque ante a dui. Etiam neque dui, sagittis eget
-                  dignissim vel, rutrum id est. Sed et velit turpis.
+                  More info to come!
                 </p>
               </div>
 
+              <!--
               <div class="nav_button_div">
                 <a class="nav_button_anchor"
                    href="proj/Webserver.html" data-remove-file-extension="true">
@@ -149,6 +150,7 @@
                   </div>
                 </a>
               </div>
+              -->
 
             </div>
           </div>
