--- a/www/html/About.html
+++ b/www/html/About.html
@@ -171,6 +171,11 @@
             </div>
 
             <div class="le_box_unit">
+              <div class="image_div">
+                <img class="le_box_image"
+                     src="images/originals/blankProfile.png"
+                     alt="TEMP">
+              </div>
               <div class="le_box_name">
                 Vacant
               </div>
