update the contact emails

--- a/www/html/Contact.html
+++ b/www/html/Contact.html
@@ -39,8 +39,9 @@
           </div>
           <div class="p2">
             <p>
-
-              webmaster@ieeeguelph.ca
+              ieee@uoguelph.ca
+              <br>
+              president@ieeeguelph.ca
             </p>
 
             <p>
@@ -65,7 +66,7 @@
               </svg>
             </a>
 
-            <a class="socials_anchor" href="mailto:webmaster@ieeeguelph.ca"
+            <a class="socials_anchor" href="mailto:ieee@uoguelph.ca"
                target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"
                    width="32"
