--- a/www/html/index.html
+++ b/www/html/index.html
@@ -64,7 +64,7 @@
             <div class="feature1">
 
               <img class="feature1_img"
-                   src="images/originals/hutt.png"
+                   src="images/originals/spingle.png"
                    alt="TEMP">
               <div class="feature_header_text">
                 IEEE Engineering Speed Mingle
