get webp images

--- a/www/html/Contact.html
+++ b/www/html/Contact.html
@@ -97,7 +97,7 @@
 
         <div class="image_div">
           <img class="image"
-               src="images/originals/contact.png"
+               src="images/contact.webp"
                alt="TEMP">
         </div>
 
