--- a/www/html/index.html
+++ b/www/html/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="banner_image_holder">
             <img class="banner_image"
-                 src="images/originals/banner.png"
+                 src="images/banner.webp"
 
                  alt="TEMP">
             <div class="banner_text">
@@ -64,7 +64,7 @@
             <div class="feature1">
 
               <img class="feature1_img"
-                   src="images/originals/spingle.png"
+                   src="images/spingle.webp"
                    alt="TEMP">
               <div class="feature_header_text">
                 IEEE Engineering Speed Mingle
@@ -111,7 +111,7 @@
 
             <div class="feature2">
               <img class="feature1_img"
-                   src="images/originals/hutt.png"
+                   src="images/hutt.webp"
                    alt="TEMP">
               <div class="feature_header_text">
                 IEEE Movie Night
@@ -202,7 +202,7 @@
                    alt="A blured image of the Amrumer lighthouse">
               <div class="more_about_image_frame">
                 <img class="more_about_frame"
-                     src="images/originals/lighthouse_frame.png"
+                     src="images/lighthouse_frame.webp"
                      alt="A croped frame of the Amrumer lighthouse with rolling hills of heather in the forground.">
               </div>
             </div>
