update the general meeting image

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -64,7 +64,7 @@
             <div class="feature1">
 
               <img class="feature1_img"
-                   src="images/spingle.webp"
+                   src="images/originals/genMeetF24.png"
                    alt="TEMP">
               <div class="feature_header_text">
                 IEEE General Meeting
