--- a/www/html/Contact.html
+++ b/www/html/Contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>Contact</title>
-    <link rel="canonical" href="https://donau.ca/Contact">
+    <link rel="canonical" href="https://www.ieeeguelph.ca/Contact">
 
     <link href="images/originals/favicon.png" rel="icon">
 
