--- a/www/html/Contact.html
+++ b/www/html/Contact.html
@@ -20,7 +20,7 @@
 
       <nav id="nav_bar_div">
         <a class="nav_bar header_locations" id="nav_projects"
-           href="Projects.html" data-remove-file-extension="true">Events</a>
+           href="Events.html" data-remove-file-extension="true">Events</a>
         <a class="nav_bar header_locations" id="nav_about"
            href="About.html" data-remove-file-extension="true">About Us</a>
         <a class="nav_bar header_locations" id="nav_contact"
