--- a/www/html/index.html
+++ b/www/html/index.html
@@ -21,7 +21,7 @@
 
       <nav id="nav_bar_div">
         <a class="nav_bar header_locations" id="nav_projects"
-           href="Projects.html" data-remove-file-extension="true">Events</a>
+           href="Events.html" data-remove-file-extension="true">Events</a>
         <a class="nav_bar header_locations" id="nav_about"
            href="About.html" data-remove-file-extension="true">About Us</a>
         <a class="nav_bar header_locations" id="nav_contact"
@@ -168,7 +168,7 @@
 
           <div class="nav_button_div">
             <a class="nav_button_anchor"
-               href="Projects.html" data-remove-file-extension="true">
+               href="Events.html" data-remove-file-extension="true">
               <div class="nav_button_anchor_flex">
                 <div
                      class="nav_button_anchor_flex_svg_wide nav_button_anchor_flex_svg">
